[gd_scene load_steps=9 format=3 uid="uid://iek1yvone6at"]

[ext_resource type="Script" uid="uid://c5yd3d13uels4" path="res://src/dino/bosses/SSBoss.gd" id="1_5hjiw"]
[ext_resource type="SpriteFrames" uid="uid://basjfrbrmdubh" path="res://src/dino/bosses/beefstronaut/beefstronaut_sprite_frames.tres" id="2_o0rv1"]
[ext_resource type="PackedScene" uid="uid://pot2dpd6w67m" path="res://src/dino/bosses/sidescroller_machine/SSBossMachine.tscn" id="7_7v6vr"]
[ext_resource type="Texture2D" uid="uid://dmx8juk2455h4" path="res://src/core/assets/lights/light64px1.png" id="12_7xc6l"]
[ext_resource type="PackedScene" path="res://src/effects/SkullParticles.tscn" id="13_qnfjf"]
[ext_resource type="FontFile" uid="uid://b1c3fty8httvk" path="res://addons/bones/fonts/at01.ttf" id="14_s0hdd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvons"]
size = Vector2(24, 31)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onh6t"]
radius = 8.0
height = 20.0

[node name="Beefstronaut" type="CharacterBody2D" groups=["bosses", "enemies"]]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_5hjiw")
can_fire = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_wvons")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = ExtResource("2_o0rv1")
animation = &"warp_leave"

[node name="LineOfSight" type="RayCast2D" parent="."]
target_position = Vector2(0, 150)
collision_mask = 2

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("12_7xc6l")

[node name="SkullParticles" parent="." instance=ExtResource("13_qnfjf")]

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("14_s0hdd")
text = "state"
horizontal_alignment = 1

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_onh6t")

[node name="SSBossMachine" parent="." instance=ExtResource("7_7v6vr")]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
